Début mobile. Bug card gauche. Bug align titre2. A finir

--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -38,6 +38,12 @@ section{
     border-end-start-radius: 10px;
 }
 
+.img1{
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 10px;
+    border-end-start-radius: 10px;
+}
 .card2{
     height: 550px;
     width: 300px;
@@ -69,11 +75,9 @@ section{
     color: var(--Very-dark-blue);
 }
 
-.img1{
-    width: 100%;
-    height: 100%;
-    border-top-left-radius: 10px;
-    border-end-start-radius: 10px;
+.lorem{
+    margin: 0%;
+    padding: 0%;
 }
 
 
@@ -134,7 +138,7 @@ section{
 
 
 svg{
-    padding-right: 5px;
+    padding-right: 10px;
 }
 
 .attribution{
@@ -143,4 +147,35 @@ svg{
     flex-direction: column;
     margin: 0;
     padding: 0;
+}
+
+@media only screen and (max-device-width: 375px){
+    
+    .container{
+        flex-direction: column;
+    }
+
+    .card1{
+        width: 350px;
+        height: 280px;
+    }
+
+    .img1{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .card2{
+        width: 310px;
+    }
+
+    .titre2{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .lorem:nth-child(2){
+        display: flex;
+    }
 }
